Fixed navbar being overlapped by other elements

--- a/src/styles/a_general.css
+++ b/src/styles/a_general.css
@@ -44,9 +44,10 @@ body {
   width: 50vw;
   margin: 0 auto;
   font-size: 0.9em;
+  z-index: 1;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
   body {
     width: 95vw;
   }
